# kinect-playground

./: .lvimrc  CMakeLists.txt  glview.cpp
